switch to pg-client
